docs: 프로토타입 정리

--- a/우테톡/프로토타입.md
+++ b/우테톡/프로토타입.md
@@ -278,3 +278,180 @@ button1.hide();
 ```
 
 이 코드에서 $2를 실행시키게 되면 그렇게 해서 만들어진 객체들은 hide라는 함수 하나만을 사용하게 된다. 그렇기 때문에 하나의 메서드를 여러곳에서 재활용 할 수 있기 때문에 메모리 측면에서 더 효율적이라고 볼 수 있게 된다.
+
+<br>
+
+---
+
+## 프로토타입 이란 무엇일까
+
+자바스크립트의 모든 객체는 자신의 부모 역할을 담당하는 객체와 연결되어 있는데
+이 부모 객체를 프로토타입이라고 한다.
+
+```
+const crew = {
+    name: 'kim',
+    screening: 'front',
+}
+```
+
+이 코드를 실행하면 내부적으로 crew는 Object 생성자 함수에 의해 생성된다.
+이때 crew는 `crew.__proto__`라는 내부 링크를 통해 Object 함수가 미리 가지고 있던 Object.prototype과 연결된다.
+이 Object.prototype을 프로토타입 객체라고 한다.
+
+<br>
+
+---
+
+## 프로토타입 체인은 무엇일까
+
+![](https://velog.velcdn.com/images/ninto_2/post/69319dad-7199-4cba-9565-d6e7c8645258/image.png)
+
+```
+const array = [];
+array.hasOwnProperty('hasOwnProperty') === false
+array.hasOwnProperty('length') === true
+```
+
+이 코드를 보면 array에는 hasOwnProperty메서드가 없다.
+하지만 에러없이 사용이 가능하다. 그 이유는 무엇일까?
+
+자바스크립트 엔진은 먼저 array 객체에 해당 프로퍼티가 존재하는지 확인한다.
+하지만 존재하지 않으므로 내부 링크(`__proto__`)를 통해 Array.prototype으로 접근한다.
+마찬가지로 Array.prototype에 해당 메서드가 있는지 확인한다.
+하지만 존재하지 않으므로 내부 링크(`__proto__`)를 통해 Object.prototype으로 접근한다.
+Object.prototype에는 해당 메서드가 존재하므로 결과적으로 array는
+`Object.prototype.hasOwnProperty`를 사용하게 되는 것이다.
+
+위 과정과 같이 어떤 객체에 특정 프로퍼티나 메서드에 접근할 때
+특정 프로퍼티나 메서드가 없다면 내부링크를 통해 상위 프로토타입으로 접근하려는 행위를 프로토타입 체인이라고 부른다.
+array 객체뿐만 아니라 자바스크립트의 모든 객체의 프로토타입체인은 Object.prototype에서 끝나게 된다.
+즉, Object.prototype은 프로토타입 체인의 종점이라고 한다.
+
+<br>
+
+---
+
+## constructor 프로퍼티
+
+프로토타입에는 constructor라는 프로퍼티가 존재한다. 이 프로퍼티의 기능은 무엇일까?
+이름에서 느껴지듯 자신을 생성한 생성자 함수를 가리키는 역할을 한다.
+Object.prototype에는 constructor 프로퍼티가 숨겨져 있는데, Object의 prototype으로 연결된다.
+
+```
+Object.prototype.constructor === Object //true
+
+crew.constructor === Object //true
+```
+
+어떤 원리 구동 방식으로 crew.constructor가 Object를 가리키는지 이해할 필요가 있다.
+그 답은 바로 프로토타입 체인에 있다.
+array 객체가 hasOwnProperty 메서드를 사용할 때 프로토타입 체인이라는 흐름으로 `Object.prototype.hasOwnProperty`를 사용한다는 것을 알게되었다.
+constructor프로퍼티도 마찬가지로 프로토타입 체인을 통해 `Object.prototype.constructor`를 사용하는 것이다.
+즉, `crew.constructor`는 내부적으로 `crew.__proto__.constructor`를 가리키게 되어 Object를 가리키게 되는 것이였다.
+
+이처럼 `Object.prototype`, `Object.prototype.constructor`, `crew.__proto__`로 맺어진 관계를 삼각편대라고 지칭한다.
+
+<br>
+
+---
+
+## 함수 에서의 프로토타입
+
+다음으로 `Funtion.prototype`과 `(function(){}).prototype` 에서의 프로토타입을 알아보자.
+화살표 함수를 제외한 자바스크립트의 모든 함수 생성은 Function 생성자함수를 통해 이루어진다.
+
+```
+function sum(a, b) {
+  return a + b;
+}
+
+var sum = new Function('a', 'b', 'return a + b');
+```
+
+즉 이 코드가 내부적으로는 function 생성자함수를 통해 동작한다는 것을 의미한다.
+여기서 `sum.__proto__`는 Function.prototype을 가리키게 되는데 그 이유는 무엇일까?
+그 이유는 삼각편대를 떠올리면 이해가 쉽다.
+결국 sum 함수도 Function생성자 함수를 통해 생성된 함수 객체이기 때문에 삼각편대 구조가 만들어지게 된다.
+하지만 함수 객체는 일반 객체와는 다르게 또 다른 특징이 하나 존재한다.
+바로 프로토타입 프로퍼티(`__prototype__`)를 가지고 태어난다는 점이다.
+
+```
+function Crew(name) {
+  this.name = name;
+}
+const foo1 = new Crew('foo1');
+const foo2 = new Crew('foo2');
+```
+
+Crew 생성자 함수를 통해 만든 객체들은 공통으로 공유할 수 있는 공간을 지원해주기 위해서 함수객체는 프로토타입 프로퍼티를 가지고 생성이 된다.
+이로 인해서 공통 변수 선언 및 메모리 절약의 이점을 가질 수 있게된다.
+위 코드에선 2개의 삼각편대가 더 존재한다.
+하나는 `Function, Function.prototype, Crew`
+또 하나는 `Crew, Crew.prototype, foo1, foo2`이다.
+
+즉 Crew는 Function 생성자 함수를 통해 생성된 함수객체임과 동시에 foo1,foo2를 생성하는 생성자 함수가 된다.
+이 삼각편대의 개념이 체화된다면 어떤 객체의 생성자 함수가 무엇인지, 또 프로토타입 체인을 통해 어떤 프로토타입 객체를 거치는지를 구상할 수 있게된다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/e324ef80-1685-4ad1-b7de-4011582156e5/image.png)
+
+- `Object.__proto__`는 무엇일까?
+  일단 Object도 결국엔 Object.prototype을 가지는 함수 객체이다.
+  그 뜻은 Function 생성자 함수에 의해 생성이 되었단 뜻과 같다.
+  즉, `Object.__proto__`는 `Function.prototype`을 가리키게 된다.
+
+- `Function.prototype.__proto__`는 무엇일까?
+  답은 `Object.prototype`이다.
+  Function.prototype도 결국엔 Object생성자 함수에 의해 생성된 객체이기 때문이다.
+
+위 개념을 살펴보면, 삼각편대가 위아래로 겹쳐진 모습을 확인할 수 있게 된다.
+Function이 먼저인지 Object가 먼저인지는 서로 순환참조를 하는 모양이 되어버렸기 때문에 그 답을 알 수가 없다.
+
+<br>
+
+---
+
+## class와 prototype의 차이
+
+클래스는 객체를 생성하려면 설계도, 즉 클래스를 작성해야 한다.
+
+```
+class Crew {
+  String name;
+  Crew(String name) {
+    this.name = name;
+  }
+}
+```
+
+위와 같은 Crew 클래스가 있을때 이 클래스는 단순히 설계도이기 때문에 힙 메모리에 존재하지 않는다.
+그렇다면 힙 메모리에 존재하게 하려면 어떻게 해야 할까?
+바로 이때 new 연산자를 이용하면 된다.
+
+```
+class Crew {
+  String name;
+  Crew(String name) {
+    this.name = name;
+  }
+}
+Crew foo = new Foo('foo');
+```
+
+반면에 프로토타입은 새로운 객체를 생성해도 Object생성자 함수를 통해 만들게 되기 때문에 Object생성자 함수도 결국은 함수객체이므로 힙 메모리에 존재하는 상태가 된다.
+즉, 실제로 존재하는 대상을 통해 객체를 생산하게 된다는 것이다.
+
+또 클래스와 프로토타입의 다른 차이점은 객체의 범주화 개념이 다르다는 점이다.
+클래스는 같은 속성을 가지고 있다고 판단되면 같은 범주로 묶을 수 있다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/9b752b11-f04d-41e7-b53e-75ff6b65e78d/image.png)
+
+예를들어 강아지와 고양이가 있다고 생각해보자.
+이 둘은 다리 개수, 꼬리 개수, 몸무게 등등의 공통 속성을 가지고 있다.
+이 세개의 속성을 가진 설계도(예를들면 동물 클래스)를 작성하여 범주화 할 수 있다.
+
+하지만 프로토타입은 설계도 이런 개념이 없기때문에 실제로 메모리에 존재하는 원형과 비교를 해서 범주화를 한다.
+원형이란 각 범주에서 대표할만한 객체를 일컫는 용어이다.
+
+예를들어 새의 범주의 원형에서는 참새가 원형이고, 고양이 범주의 원형에서는 고양이가 원형이라고 가정해보자.
+이상태에서 타조의 범주를 매긴다고 했을때 참새와 고양이를 비교해서 더 공통속성이 많은 새의 범주에 들게 된다.
