docs: 동기 비동기 정리

--- a/노드/콜백과 프로미스.md
+++ b/노드/콜백과 프로미스.md
@@ -114,3 +114,151 @@ console.log("다 찾았나요?");
 콜백헬 코드와 비교해서 깊이가 깊어지지도 않고, 항상 최대 2뎁스를 유지하는 깔끔한 코드 작성이 가능해짐
 비동기 하나가 실행되면 그 다음 비동기로 아래로 순차적으로 흐름이 내려가고 있음.
 이래서 프로미스가 처음 나왔을때 엄청난 인기를 끌었음
+
+프로미스는 실제로 모든 곳에 막 쓰이는 것이 아니라, 프로미스를 만드는 방법이 따로 존재한다.
+
+```js
+// 실제로 Promise를 쳤을때 Promise 생성자가 나옴
+// 함수라기보단 대문자로 되있으면 생성자라는 뜻에 더 가까움 (앞에 new를 붙일 수 있다는걸 자바스크립트가 알려줌)
+Promise; // ƒ Promise() { [native code] }
+
+// 프로미스를 만드는 구조 (그냥 외워야됨)
+// resolve와 reject가 매개변수인 함수를 넣음
+// resolve는 성공했을때
+const plus = new Promise((resolve, reject) => {
+  const a = 1;
+  const b = 2;
+  if (a + b > 2) {
+    resolve(a + b); //여기서 a + b는 메세지라고 생각하면됨
+  } else {
+    reject(a + b); //reject는 실패메세지
+  }
+});
+```
+
+`new Promise`로 미리 껍데기를 만들어 놓고, 안에는 코딩을 하면 된다. (마치 콜백처럼)
+이렇게 만든 프로미스를 변수에 대입한다.
+위에서 만든 프로미스의 결과값이 resolve가 되면 then으로 넘어가고,
+reject가 되면 catch로 넘어가게 된다.
+
+```js
+plus //위에 상황에서는 then이 실행됨
+  .then((success) => {
+    console.log(success);
+  })
+  .catch((fail) => {
+    console.error(fail);
+  });
+// Promise {<resolved>: undefined} //만약 실패했으면 rejected가 뜸
+```
+
+```js
+//실패하도록 promise를 구현했을때
+const plus = new Promise((resolve, reject) => {
+  const a = 1;
+  const b = 2;
+  if (a + b < 2) {
+    resolve(a + b);
+  } else {
+    reject(a + b);
+  }
+});
+plus
+  .then((success) => {
+    console.log(success);
+  })
+  .catch((fail) => {
+    console.error(fail);
+  });
+// rejected가 실행됐기때문에 console.error에 메세지로 3이 출력됨
+```
+
+앞선 코드에서 Users.findOne이 then과 catch가 사용가능했던 이유는 함수 내부적으로 가지고 있기 때문이다.
+예를 들면 아래의 코드와 같다.
+
+```js
+const Users = {
+  findOne() {
+    return new Promise((resolve, reject) => {
+      if ('사용자를 찾았으면') {
+        resolve('사용자'); //성공
+      } else {
+        reject('못 찾았아요'); //실패
+      }
+    })
+  },
+  //remove, update도 마찬가지로 내부적으로 프로미스를 반환해주는 모양을 띄고있다.
+  remove() {
+    return new Promise(...); //이 안에서도 성공, 실패
+  },
+  update() {
+    return new Promise(...); //마찬가지
+  },
+}
+// Users에 리턴 프로미스가 있기때문에 내부적으로 then과 catch가 사용가능한 이유
+Users.findOne()
+  .then()
+  .catch()
+```
+
+콜백을 프로미스로 막 바꿀수 있는 것이 아니라 내부적으로 new 프로미스를 지원을 해주는 녀석들만 가능함
+만약 프로미스로 반환하지 않는 메서드라면 then과 catch를 사용할 수 없다.
+
+요즘 유명한 라이브러리들은 왠만하면 이렇게 프로미스가 지원이 될 수 있게끔 업데이트가 이루어지고 있다.
+프로미스가 나온지 3년이 지났기 때문에 왠만한 라이브러리들은 콜백에서 프로미스로 바꿀 수 있는 방법이 존재한다.
+그리고 만약 없다면 노드에서 프로미스로 강제로 바꿀 수 있는 방법 또한 존재한다.
+반대로 프로미스를 콜백으로 바꾸는 방법또한 노드에는 존재한다.
+
+```js
+const condition = true; // true면 resolve, false면 reject
+//프로미스 껍데기 만들고 그안에 코드 작성
+const promise = new Promise((resolve, reject) => {
+  if (condition) {
+    //성공하는 조건 마음대로 줌
+    resolve("성공");
+  } else {
+    reject("실패"); //실패하면 실패메세지
+  }
+});
+
+promise
+  .then((message) => {
+    console.log(message); //성공(resolve)한 경우 실행
+  })
+  .catch((error) => {
+    console.log(error); //실패(reject)한 경우 실행
+  });
+```
+
+```js
+const condition = true;
+const promise = new Promise((resolve, reject) => {
+  if (condition) {
+    resolve("성공");
+  } else {
+    reject("실패");
+  }
+});
+
+// resolve(msg) -> then((msg)
+// reject(err) -> catch((err)
+
+promise
+  .then((message) => {
+    return new Promise((resolve, reject) => {
+      resolve(message);
+    });
+  })
+  .then((message2) => {
+    console.log(message2);
+    return new Promise((resolve, reject) => {
+      resolve(message2);
+    });
+  })
+  .then((message3) => {
+    console.log(message3);
+  })
+  .catch((error) => {
+    console.log(error);
+  });
+```
