feat: 데이터 API연결, 수정 삭제 기능구현

--- a/리액트/리액트개요.md
+++ b/리액트/리액트개요.md
@@ -14,4 +14,44 @@ Browser DOM(Document Object Model) < Virtual DOM
   - Babel(자바스크립트 컴파일러): JSX등의 쉽고 직관적인 자바스크립트 문법을 사용할 수 있도록 해주는 라이브러리
   - 하나하나 다 설정할 필요없이 Boiler Plate 사용해도 가능함
 
-## JSX
+### JSX
+
+### State(상태)
+
+- 계속해서 변화하는 특정 상태
+- 상태에 따라 각각 다른 동작을 함
+
+### Props
+
+### 컴포넌트 & 데이터 구조 생각하기
+
+- 컴포넌트 트리
+- 단방향 데이터 흐름
+- EVENT(역방향) , DATA(단방향)
+
+### Lifecycle 제어하기
+
+- Lifecycle : 생애주기
+  (Mount -> Update(리랜더) -> UnMount)
+  (초기화 -> 예외처리 -> 메모리정리)
+- ComponentDidMount -> ComponentDidUpdate -> ComponentWillUnmount
+  (Class React Component Only)
+
+### React Hooks (2019.6 정식출시된 기능)
+
+- useState, useEffect, useRef
+  (함수형 컴포넌트에서 클래스형 컴포넌트 기능을 낚아채듯 사용가능)
+- useEffect : Lifecycle 메서드 훔쳐올 수 있음
+- 클래스형 컴포넌트 단점: 길어지는 코드 길이문제, 중복 코드, 가독성 문제 ...
+- 클래스형 컴포넌트 < 함수형 컴포넌트 사용하는 추세
+
+```jsx
+import React, { useEffect } from "react";
+
+// 첫번째 파라미터론 콜백함수 전달, 두번째 파라미터는 Dependency Array(의존성 배열) 전달
+useEffect(() => {
+  // ...
+}, []);
+```
+
+- 의존성 배열(뎁스): 이 배열 내에 들어있는 값이 변화하면 콜백함수가 실행됨
