docs: 리액트 개요정리

--- a/리액트/리액트개요.md
+++ b/리액트/리액트개요.md
@@ -55,3 +55,19 @@ useEffect(() => {
 ```
 
 - 의존성 배열(뎁스): 이 배열 내에 들어있는 값이 변화하면 콜백함수가 실행됨
+
+### React API 호출
+
+- JSONPlaceholder 사이트 -> Resources
+
+### React Developer Tools
+
+- Chrome Web Store -> React Developer Tools ->
+
+### Memoization (연산 결과 재사용하기)
+
+- 이미 계산해본 연산 결과를 기억해 두었다가 동일한 계산을 시키면,
+  다시 연산하지 않고 기억해 두었던 데이터를 반환 시키게 하는 방법
+
+- 연산 최적화 하기(답을 기억해둔다. -> 기억해 두었던 답을 다시 적는다.)
+- useMemo
