docs: 자바스크립트 배열 정리 추가

--- a/main/Javascript/완벽가이드/7장-배열.md
+++ b/main/Javascript/완벽가이드/7장-배열.md
@@ -176,3 +176,220 @@ ES6에서 도입한 팩토리 메서드 입니다.
 ## 배열 비슷한 객체
 
 ## 배열인 문자열
+
+![](https://velog.velcdn.com/images/ninto_2/post/7ab0f51b-ec62-4487-a194-ab70e5fab4f1/image.png)
+
+<h2 id='1'>📌 목차</h2>
+
+- **🌱 배열과 특징**
+
+	
+    - **자바스크립트의 배열 (Array)**
+	
+    - **희소 배열 Sparse Array (= 성긴 배열)**
+    
+    - **문자 배열 (= 배열인 문자열)**
+    
+    - **다차원 배열**
+    
+    - **유사 배열 객체 (= 배열 비슷한 객체)**
+	
+    - **Iterable (이터러블)** 
+    
+- **🌱 배열 조작과 메서드**
+
+	
+    - **배열 생성하기**
+	
+    - **요소 추가/삭제하기**
+    
+    - **배열 대체/복사하기**
+    
+    - **배열 평탄화/병합하기**
+    
+    - **배열 순회/탐색/정렬하기**
+
+<br>
+
+***
+
+<h3 id='2'>📌 자바스크립트 배열</h3>
+
+> **배열이 배열이 아니라고? 😨**
+
+`'자바스크립트의 배열은 배열이 아니다.'` 라던가 `'자바스크립트의 배열에는 타입이 없다.'` 라는 말을 들어본 적이 있을 것 입니다.
+
+실제로 아래와 같이 console에 배열의 타입을 찍어보면 'array'가 아닌 'object'가 나옵니다.
+
+```js
+typeof Array() // 'object'
+```
+
+그 이유를 알기 위해선 먼저, **자료구조에서 말하는 배열**에 대해 알 필요가 있습니다.
+
+배열은 어느 프로그래밍 언어에나 존재하는 자료구조 입니다.
+기본적으로 값의 순서있는 집합이며, 안의 값을 요소(element)라고 합니다.
+
+> **배열은 프로토타입으로 탐색과 변형 작업을 수행하는 메서드를 갖는, 리스트와 비슷한 객체(list-like objects)입니다.** -MDN
+
+여기서 말하는 리스트는 자료구조에서 말하는 배열과 비슷합니다.
+자료구조에서 말하는 배열(Array)은 **동일한 크기의 메모리 공간이 빈틈없이 연속적으로 나열된 자료구조**를 의미합니다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/10bbaca5-2c15-4489-92ea-6d2ae626975d/image.png)
+
+
+위의 그림과 같이 각 요소가 동일한 데이터 크기를 가지며, 빈틈없이 연속적으로 이어져 있습니다. 이러한 배열을 **밀집 배열(Dense Array)**이라고 하며, 인덱스를 통해 단 한 번의 연산으로 임의의 요소에 접근이 가능합니다.
+
+하지만, **자바스크립트의 배열은 요소가 동일한 크기의 메모리 공간을 갖지 않아도 되며, 연속적으로 이어져 있지 않을 수 도 있습니다.** 
+
+또한, `원시값, 객체, 함수, 배열 등 어떤 타입의 값`이라도 요소가 될 수 있습니다.
+
+```js
+const arr = [
+  1, 'a', true, null, undefined, , [], {}, function(){}, Symbol(),
+    ];
+```
+![](https://velog.velcdn.com/images/ninto_2/post/6db96731-432f-4a0c-a476-748fbd6271ee/image.png)
+
+위 구조를 보면, 배열은 **인덱스와 요소, 길이를 나타내는 length 프로퍼티**를 가지고 있는 것을 확인할 수 있습니다. 
+그런데 얼핏보면, 인덱스를 키로 가지고 요소를 값으로 가지고 있는 객체와 유사해 보입니다. 
+또한 자세히 살펴보면, 길이는 10으로 찍히지만 5번째 요소는 비어있음으로 찍히며 포함되어 있지 않은 것을 볼 수 있습니다.
+
+그 이유는 자바스크립트의 배열이 일반적인 배열의 동작을 흉내 낸 **특수한 객체**이기 때문입니다.
+
+```js
+console.log(Array.isArray(arr)); // true
+console.log(arr.constructor === Array); // true
+console.log(Object.getPrototypeOf(arr) === Array.prototype); //true
+```
+이 코드만 살펴보아도 자바스크립트의 배열이 객체라는 것을 알 수 있습니다. 하지만 일반적인 객체와는 차이점이 있는 특수한 객체라는 점을 살펴보아야 합니다.
+
+```js
+console.log(Object.getOwnPropertyDescriptors(arr));
+```
+![](https://velog.velcdn.com/images/ninto_2/post/d8306ade-5676-49bc-bda5-847699cda8f3/image.png)
+
+자바스크립트 배열의 내부를 살펴보면, 이러한 **해쉬테이블로 구현**되있는 것을 확인할 수 있습니다.
+
+
+> 자바스크립트의 배열은 사실 **인덱스를 나타내는 문자열을 프로퍼티 key로 가지며, value 값으로 배열의 요소를 갖고, length 라는 프로퍼티를 갖는 특수한 객체**입니다.
+
+인덱스를 문자열 프로퍼티 key로 가지기 때문에, 배열의 요소에 접근할때 대괄호안에 인덱스를 넣는 것 만으로도 해당 요소의 값을 가져 올 수 있습니다.
+
+```js
+arr[0]; // 1
+arr[1]; // 'a'
+arr['1']; // 'a'
+arr[1] === arr['1'] // true
+```
+
+일반적으로 배열 인덱스는 0이상 2의 23승 - 2(약 42억) 이하의 정수를 가지며, 그 외의 경우는 객체의 프로퍼티로 취급합니다.
+
+```js
+arr[-9999]; // undefined
+arr[9999]; // undefined
+arr['a'] // undefined
+```
+
+그렇기 때문에 존재하지 않는 인덱스로 요소에 접근해도 에러없이 undefined를 반환할 뿐입니다.
+
+
+
+<br>
+
+***
+
+<h3 id='3'>📌 희소 배열 Sparse Array</h3>
+
+본 책에서는 성긴 배열이라고 기재되었지만, 희소 배열과 같은 말입니다.
+
+> **희소배열은 요소들의 인덱스가 연속적이지 않은 배열입니다.**
+
+![](https://velog.velcdn.com/images/ninto_2/post/445d2d55-4bd5-412f-960c-bb201da589d3/image.png)
+
+
+**자바스크립트의 배열**이 자료구조에서 말하는 밀집 배열(Dense Array)과 다른 점은 이러한 **희소 배열(Sparse Array)을 허용**하기 때문입니다.
+
+자바스크립트 배열은 내부적으로 해쉬 테이블로 구현되어 있기 때문에 메모리 주소가 연속적으로 나열되지 않습니다.
+또한 배열의 요소가 동일한 메모리 크기를 갖지 않아도 되기에 여러가지의 타입을 하나의 배열 안에 넣을 수 있습니다.
+
+> **그렇다면, 자바스크립트는 왜 밀집배열이 아닌 희소배열을 택했을까? 🤔**
+
+||일반적인 배열|자바스크립트 배열|
+|:----|:----:|:----:|
+|인덱스로 요소 접근|O(1)|O(n)|
+|요소 탐색,추가,삭제|평균의 경우 O(n)|평균의 경우 O(1)|
+
+<br>
+
+일반적인 배열의 경우 인덱스로 요소에 빠르게 접근이 가능하지만, 자바스크립트의 배열은 해시 테이블로 구현된 객체이므로 **일반적인 배열보다 성능적으로 느립니다.**
+
+만약 인덱스로 주어진다면 해당 인덱스와 같은 키값을 찾으려고 O(n)의 시간복잡도를 가지는 순차검색을 해야하기 때문입니다.
+
+
+하지만 **탐색, 추가, 삭제에서의 성능**은 자바스크립트의 배열이 일반적인 배열에서의 시간 복잡도보다 **더 빠른 성능**을 가지게 됩니다.
+
+이런식으로 자바스크립트는 탐색, 추가, 삭제에 의한 장점이 더 크다고 판단해 희소 배열인 해쉬 테이블로 배열을 구현한 것입니다.
+
+>**자바스크립트 배열과 일반 객체의 성능비교**
+
+```js
+// 배열에서의 인덱스로 요소접근 약 340ms
+const arr = [];
+for (let i = 0; i < 10_000_000; i++) {
+	arr[i] = i;
+}
+
+// 일반객체에서의 인덱스로 요소접근 약 600ms
+const obj = {};
+for (let i = 0; i < 10_000_000; i++) {
+	obj[i] = i;
+}
+```
+
+모던 자바스크립트 엔진은 인덱스로 요소에 접근할 때의 단점을 보완하기 위해 배열을 **일반 객체와 구별하여 좀 더 배열처럼 동작하도록 최적화하여 구현**했습니다.
+
+<br>
+
+> **희소배열을 만드는 방법**
+
+희소배열을 만드는 방법은 여러가지가 있습니다.
+
+```js
+// 길이가 3인 희소배열 만들기
+
+const arr1 = new Array(3);
+
+const arr2 = [,,,];
+
+const arr3 = [];
+arr3.length = 3;
+
+const arr4 = [];
+arr4[2] = 0;
+
+const arr5 = [1,2,3];
+delete arr5[2];
+```
+
+**희소배열은 이렇듯 실제 요소의 개수보다 length가 큽니다.**
+
+
+> **Q. 아래 배열 arr에 남아있는 요소와 길이는 몇 일까요? 🤔 ** 
+
+```js
+const arr = [,];
+
+arr[2] = 'a';
+arr.shift();
+arr.push('b');
+delete arr[2];
+
+arr.length;
+```
+
+왜 이런 결과가 나오는지는 배열의 **length프로퍼티가 가지고 있는 특징**을 함께 살펴보면 이해하기 쉽습니다.
+
+> **Array.prototype.length**
+
+![](https://velog.velcdn.com/images/ninto_2/post/b480b834-ec8c-4028-b37e-102cc371cc85/image.png)
