docs: 배열 추가 정리

--- a/main/Javascript/완벽가이드/7장-배열.md
+++ b/main/Javascript/완벽가이드/7장-배열.md
@@ -194,7 +194,7 @@ ES6에서 도입한 팩토리 메서드 입니다.
     
     - **유사 배열 객체 (= 배열 비슷한 객체)**
 	
-    - **Iterable (이터러블)** 
+    - **이터러블과 이터레이터** 
     
 - **🌱 배열 조작과 메서드**
 
@@ -213,7 +213,7 @@ ES6에서 도입한 팩토리 메서드 입니다.
 
 ***
 
-<h3 id='2'>📌 자바스크립트 배열</h3>
+<h2 id='2'>📌 자바스크립트 배열</h2>
 
 > **배열이 배열이 아니라고? 😨**
 
@@ -299,7 +299,7 @@ arr['a'] // undefined
 
 ***
 
-<h3 id='3'>📌 희소 배열 Sparse Array</h3>
+<h2 id='3'>📌 희소 배열 Sparse Array</h2>
 
 본 책에서는 성긴 배열이라고 기재되었지만, 희소 배열과 같은 말입니다.
 
@@ -313,7 +313,7 @@ arr['a'] // undefined
 자바스크립트 배열은 내부적으로 해쉬 테이블로 구현되어 있기 때문에 메모리 주소가 연속적으로 나열되지 않습니다.
 또한 배열의 요소가 동일한 메모리 크기를 갖지 않아도 되기에 여러가지의 타입을 하나의 배열 안에 넣을 수 있습니다.
 
-> **그렇다면, 자바스크립트는 왜 밀집배열이 아닌 희소배열을 택했을까? 🤔**
+> **그렇다면, 자바스크립트는 왜 밀집배열이 아닌 희소배열을 택했을까요? 🤔**
 
 ||일반적인 배열|자바스크립트 배열|
 |:----|:----:|:----:|
@@ -358,18 +358,18 @@ for (let i = 0; i < 10_000_000; i++) {
 ```js
 // 길이가 3인 희소배열 만들기
 
-const arr1 = new Array(3);
+const arr1 = new Array(3); // [empty, empty, empty]
 
-const arr2 = [,,,];
+const arr2 = [,,,]; // [empty, empty, empty]
 
 const arr3 = [];
-arr3.length = 3;
+arr3.length = 3; // [empty, empty, empty]
 
 const arr4 = [];
-arr4[2] = 0;
+arr4[2] = 0; // [empty, empty, 0]
 
 const arr5 = [1,2,3];
-delete arr5[2];
+delete arr5[2]; // [1, 2, empty]
 ```
 
 **희소배열은 이렇듯 실제 요소의 개수보다 length가 큽니다.**
@@ -393,3 +393,292 @@ arr.length;
 > **Array.prototype.length**
 
 ![](https://velog.velcdn.com/images/ninto_2/post/b480b834-ec8c-4028-b37e-102cc371cc85/image.png)
+
+length프로퍼티는 몇 가지 특별한 동작을 수행합니다.
+일반적으로 length프로퍼티는 **배열의 길이를 반환**하며, length 속성에 **값을 설정할 경우 배열의 길이를 변경**합니다.
+
+자바스크립트의 배열이 일반객체와 다른점은 이런 length프로퍼티를 가지고 있다는 점입니다.
+
+**배열에 새 요소를 추가할 때마다 length 프로퍼티의 value값이 자동으로 업데이트**됩니다.
+
+> 자바스크립트에서 정의하는 **배열의 길이(length프로퍼티의 value값)는 배열에서 가장 높은 인덱스보다 더 큰 양수의 32 비트 정수값**입니다.
+
+즉, length 프로퍼티는 value값으로 **0이상의 가장 높은 인덱스만을 기준으로 잡고 +1을 한 값**으로 업데이트 됩니다.
+
+```js
+const arr = [];
+arr[5] = 'el';
+arr.length // 6
+```
+
+```js
+const arr = [1,2,3];
+arr[-1] = 0;
+console.log(arr);
+/*
+0: 1
+1: 2
+2: 3
+-1: 0
+length: 3
+*/
+
+delete arr[1];
+console.log(arr);
+/*
+0: 1
+2: 3
+-1: 0
+length: 3
+*/
+```
+
+위의 코드를 살펴보면 인덱스의 조건에 맞지 않은 값은 객체 프로퍼티로 인식하여 실제 length의 길이에 영향을 주지 않는 것을 확인할 수 있습니다.
+또한, delete로 가장 높은 인덱스를 건들이지 않고 중간 요소를 삭제해도 길이는 변하지 않은 점을 볼 수 있습니다.
+
+> **그렇다면, delete로 배열의 가장 높은 인덱스를 삭제하게 된다면 길이는 변할까요? 🤔 **
+
+```js
+const arr = ['el'];
+delete arr[0];
+arr.length; // 1
+arr; // [empty]
+```
+
+delete는 배열 요소를 삭제해도 배열 길이는 영향을 받지 않습니다. 이것은 배열의 마지막 요소를 삭제하더라도 유지됩니다.
+
+```js
+const arr = ['el'];
+arr.pop();
+arr.length; // 0
+arr; // []
+```
+
+```js
+const arr = ['el'];
+arr.length = 0;
+arr; // []
+```
+
+반면, length에 값을 할당하여 조작하거나 `pop()`을 사용하여 배열의 마지막 요소를 삭제하게 되면 배열의 길이에 영향을 미치게 되게 됩니다.
+
+<br>
+
+***
+
+
+<h2 id ='4'>📌 문자 배열 (= 문자열)</h2>
+
+
+![](https://velog.velcdn.com/images/ninto_2/post/a4ebeced-7af0-44b3-b071-04ad89641a3f/image.png)
+▲ C언어에서의 문자열
+
+> **문자열은 문자형 배열로, 문자열을 저장하는 하나의 변수와 같은 역할을 합니다.**
+
+```js
+const word = 'Love';
+word[0]; // 'L'
+word.length; // 4
+
+```
+
+기본적으로 문자열은 배열과 비슷하게 0이상의 정수로 시작하는 인덱스에 각각의 값이 담겨져 있으며, length 프로퍼티를 사용할 수 있습니다.
+
+**자바스크립트의 문자열은 읽기 전용 배열처럼 동작합니다.**
+
+기본적으로 문자열은 불변인 값이므로 기존 배열을 수정하는 `push(), sort(), reverse(), splice() 등...` 같은 메서드는 동작하지 않습니다. 
+
+```js
+const word = 'Love';
+word[0] = 'D';
+word.length = 2;
+console.log(word); // 'Love'
+```
+
+또한 인덱스로 직접적인 값을 할당하거나, length의 길이를 조작해도 에러없이 조용히 실패하기만 합니다. 
+
+<br>
+
+***
+
+<h2 id='5'>📌 다차원 배열</h2>
+
+![](https://velog.velcdn.com/images/ninto_2/post/8c3bac48-d9b9-48c0-a749-d53d55025bbf/image.png)
+
+> **자바스크립트**에서는 다른 언어에서의 다차원 배열을 직접 지원하지는 않지만 **배열안에 배열을 만들어 대략적으로 흉내** 낼 수 있습니다.
+
+```js
+const arr = [[]];
+arr[0][0] = 1;
+
+// 반복문으로 10 행 10 열의 2차원 배열 만들기
+const table = new Array(10);
+for (let i = 0; i < table.length; i++) {
+	table[i] = new Array(10);
+}
+
+table[9][0] = 'el'; //[세로][가로] 로 접근 
+table;
+
+```
+![](https://velog.velcdn.com/images/ninto_2/post/dc824bf8-26ed-40eb-9f52-a492728114c7/image.png)
+
+2차원 배열에서 인덱스로 요소에 접근할 때, **첫 번째 대괄호에는 세로 크기, 두 번째 대괄호에는 가로 크기**로 표기합니다.
+
+<br>
+
+***
+
+<h2 id= '6'>📌 유사 배열 객체</h2>
+
+> **유사 배열 객체는 일반 객체가 인덱스로 프로퍼티 값에 접근할 수 있고, length 프로퍼티를 가지고 있는 경우를 의미합니다.**
+
+```js
+const obj1 = {
+	0: 'a',
+	1: 'b',
+	2: 'c',
+	3: 'd',
+	4: 'e',
+	length: 5,
+}
+Array.isArray(obj1); // false
+obj1.hasOwnProperty(Array.prototype.length); // true
+
+```
+![](https://velog.velcdn.com/images/ninto_2/post/f8ffaf9f-a91c-4cc1-901a-559a8cf2750d/image.png)
+
+유사 배열 객체는 배열의 length 프로퍼티를 가지고 있지만 모든 속성이 true로 변한 것을 확인할 수 있습니다.
+
+```js
+// 5의 길이를 갖는 유사 배열 객체 만들기
+const obj2 = {};
+for (let i = 0; i < 5; i++) {
+	obj2[i] = i;
+  	obj2.length = i + 1;
+}
+Array.isArray(obj2); // false
+
+for (let i = 0; i < obj2.length; i++) {
+	console.log(obj2[i]); // 0 1 2 3 4
+}
+
+obj2[0]; // 0
+obj2.0; // SyntaxError
+obj2.push(5) // TypeError
+```
+
+유사 배열 객체는 length 프로퍼티를 갖기 때문에 for 문으로 순회할 수 있고, 인덱스를 나타내는 숫자 형식의 문자열을 프로퍼티 키로 가지므로 배열처럼 인덱스로 프로퍼티 값에 접근할 수 있습니다.
+
+> 하지만, **유사 배열 객체는 배열이 아니므로 Array.prototype을 상속하지 않습니다.**
+
+유사 배열 객체에서 배열 메서드를 사용하려면 `call`을 사용하거나 `Array.from()`으로 복사를 한 뒤 사용해야 합니다.
+
+<br>
+
+***
+
+<h2 id='7'>📌 이터러블과 이터레이터</h2>
+
+
+> ES6 에서는 **순회 가능한 자료구조를 이터러블로 통일**하여 `for…of 문, 스프레드 문법, 배열 디스트럭처링 할당(구조 분해 할당)`의 대상으로 사용할 수 있도록 일원화하였습니다.
+
+`iterable`을 단어적으로 해석하면 `순환하다, 반복하다`라는 뜻을 가집니다.
+ 
+**이터러블**은 `Symbol.iterator` 메서드를 호출했을때 **이터레이터 인스턴스를 반환**합니다.
+
+자바스크립트는 이터레이션 프로토콜을 준수한 객체인 빌트인 이터러블을 제공합니다.
+
+|빌트인 이터러블|Symbol.iterator 메서드|
+|:--|:--|
+|Array|Array.prototype[Symbol.iterator]|
+|String|String.prototype[Symbol.iterator]|
+|Map|Map.prototype[Symbol.iterator]|
+|Set|Set.prototype[Symbol.iterator]|
+|TypedArray|TypedArray.prototype[Symbol.iterator]|
+|arguments|arguments[Symbol.iterator]|
+|DOM 컬렉션|NodeList.prototype[Symbol.iterator], HTMLCollection.prototype[Symbol.iterator]|
+
+유사 배열 객체의 경우 Symbol.iterator를 포함하고 있지 않은 일반 객체이기 때문에 이터러블에 해당하지 않습니다.
+
+```js
+const obj2 = {};
+for (let i = 0; i < 5; i++) {
+	obj2[i] = i;
+  	obj2.length = i + 1;
+}
+// for...of문을 사용하면 TypeError: obj2 is not iterable
+for(let i of obj2) {
+    console.log(i);
+}
+
+// 구조분해할당을 사용하면 TypeError: number 0 is not iterable
+[[x], [y]] = [obj[0], obj[1]];
+
+// 일반 객체의 스프레드 문법 사용
+console.log({...obj2}); // {0: 0, 1: 1, 2: 2, 3: 3, 4: 4, length: 5}
+
+// 배열의 스프레드 문법 사용
+console.log([...obj2]); // TypeError: obj2 is not iterable
+```
+**유사 배열 객체**에 for...of문과 구조분해 할당을 사용하게 되면 TypeError가 발생하지만, 스프레드 문법을 사용했을 땐 **일반 객체의 스프레드 문법이 사용** 되는 것을 볼 수 있습니다.
+
+<br>
+
+배열은 기본적으로 이터러블이기 때문에 이터레이터 메서드들을 가지고 있습니다.
+
+이터러블이 `Symbol.iterator` 메서드를 호출해 반환된 이터레이터가 **next 메서드를 소유**하고, next 메서드를 호출하면 이터러블을 순회하며 value와 done 프로퍼티를 갖는 **이터레이터 리절트 객체를 반환**할 때 이를 **이터레이터**라고 합니다.
+
+대표적으로 `forEach(), map(), filter(), find(), findIndex(), every(), some(), reduce(), reduceRight()` 등...
+
+배열 이터레이터 메서드는 배열 요소를 순서대로 함수에 전달하는 방식으로 동작합니다.
+
+**모두 첫 번째 인자로 함수**를 받으며 **각 배열 요소(또는 일부 요소)에 대해 그 함수를 한 번씩 호출**합니다.
+
+```js
+const arr = [1, ,3]; // [1, empty, 3]
+
+// 배열 이터레이터 메서드에서의 희소배열 반복
+arr.forEach((value, index) => {
+  console.log(value, index);
+});
+/*
+1 0
+3 2
+*/
+
+// for...of문에서 희소배열 반복 
+for(i of arr) {
+    console.log(i);
+}
+/*
+1
+undefined
+3
+*/
+
+// 일반 for문에서 희소배열 반복
+for (let i = 0; i < arr.length; i++) {
+    console.log(arr[i], i);
+}
+/*
+1 0
+undefined 1
+3 2
+*/
+```
+
+
+배열 이터레이터 메서드는 희소 배열처럼 **존재하지 않는 요소(empty)는 호출하지 않습니다.**
+
+이터레이터 메서드는 **호출하는 함수에서 받게되는 인자로 배열 요소의 값, 인덱스, 배열 자체**를 받는데 실제로 첫 번째 인자인 배열 요소의 값만 사용하고 두번째, 세번째 인자는 무시할 때도 많습니다.
+
+<br>
+
+***
+
+<h2 id='8'>📌 배열 생성하기</h2>
+
+
+
+
