--- a/main/Javascript/완벽가이드/8장-함수.md
+++ b/main/Javascript/완벽가이드/8장-함수.md
@@ -1,46 +1,8 @@
-- 컨텍스트(실행 컨텍스트와 호출 컨텍스트)
-- 화살표 함수
-- 클로저
-- 스코프
-  - 블록 레벨 스코프, 함수 호이스팅
-- 재귀함수와 콜백함수
-- 생성자, 프로퍼티, 메서드
-- 이터레이터, 제너레이터
-- 비동기 함수
-- 자바스크립트 인터프리터
-
-# 함수
-
-- 자바스크립트의 기본적인 구성 요소
-- 프로그래밍 언어의 공통 기능
-- 서브루틴, 프로시저
-- 함수: 한번 정의하면 몇 번이고 호출할 수 있는 자바스크립트 코드 블록
-- 자바스크립트의 함수: 매개변수(식별자 리스트)화
-- 함수 정의: 매개변수 -> 함수바디 안에서 지역 변수처럼 동작
-- 함수 호출: 매개변수에 값(인자) 전달 -> 인자를 사용해 반환 값 도출(함수 호출 표현식의 값)
-- 호출 컨텍스트(this 키워드의 값)
-- 객체 메서드: 객체 프로퍼티로 할당된 함수
-- 객체를 통해 함수 호출 -> 그 객체가 호출 컨텍스트, 함수의 this값이 됨
-- 생성자 함수: 객체를 새로 만들 목적으로 설계한 함수
-- 함수는 객체다 (프로그램에서 조작 가능)
-  - 함수형 프로그래밍
-  - 함수를 변수에 할당 -> 다른 함수에 전달 가능
-  - 프로퍼티 정의 가능
-  - 함수의 메서드 호출 가능
-- 자바스크립트의 함수는 다른 함수 안에서 정의 가능
-- 이렇게 정의된 함수는 자신이 정의된 스코프의 변수에 접근 가능
-- 자바스크립의 함수는 클로저다.
-  - 클로저를 잘 다루면 강력한 프로그래밍 기법을 사용할 수 있다.
-
-<br>
-
----
-
 ## 함수 정의
 
 `function 선언, 함수 표현식, 화살표 함수`
 
-### 📌 함수 선언
+### 함수 선언
 
 - `function` 키워드: 함수를 정의하는 가장 단순한 방법
 - 선언으로든, 표현식으로든 사용이 가능하다.
@@ -125,7 +87,7 @@ const func = function () {
 - 함수를 정의하는 표현식이 실제로 평가되기 전에는 함수가 존재하지 않는다.
 - 표현식으로 정의된 함수는 변수에 할당하기 전에는 참조, 호출 할 수 없다.
 
-### 📌 화살표 함수
+### 화살표 함수
 
 ```js
 const func = () => {
@@ -233,7 +195,7 @@ const strict = (function () {
 
 하지만 this 키워드를 사용해서 스트릭트 모드에 있는지 확인하는 것은 가능합니다.
 
-#### 📌 조건부 호출
+### 조건부 호출
 
 함수를 호출했을때 null이나 undefined인 상황을 방지하기 위해 조건부 호출을 사용할 수 있습니다.
 
@@ -248,7 +210,7 @@ func !== null && func !== undefined ? func(x) : undefind;
 
 ES2020에서는 함수 표현식과 여는 괄호 사이에 `?.`을 넣어서 함수가 null이나 undefined가 아닌 경우에만 호출하게 할 수 있습니다.
 
-#### 📌 재귀 함수와 스택
+### 재귀 함수와 스택
 
 ```js
 // 무한 호출되는 재귀함수
@@ -264,13 +226,78 @@ function func() {
 
 ### 메서드로 호출
 
-#### 📌 메서드 체인
+```js
+const obj = {
+  x: 5,
+  y: 10,
+  func() {
+    return this.x + this.y;
+  },
+};
+
+obj.func(); // 객체의 메서드 호출 15
+```
+
+메서드는 객체 프로퍼티로 저장된 자바스크립트 함수입니다.
+메서드 호출의 인자와 반환 값은 일반적인 함수 호출과 똑같습니다.
+하지만 메서드 호출과 함수 호출은 호출 컨텍스트가 다르다는 중요한 차이가 있습니다.
+메서드 호출 표현식에서 객체 obj는 호출 컨텍스트가 되고, 함수 바디는 키워드 this를 통해 그 객체를 참조할 수 있습니다.
+
+메서드 호출은 대부분 점 표기법을 통해 접근하지만, 대괄호 표현식으로도 메서드를 호출할 수 있습니다.
+메서드와 this 키워드는 객체 지향 프로그래밍 패러다임의 핵심입니다.
+메서드로 사용되는 함수는 모두 자신을 호출하는 객체를 묵시적인 인자로 받습니다.
+
+`this`는 변수나 프로퍼티 이름이 아니라 키워드입니다.
+자바스크립트 문법은 this에 값을 할당하는 것을 허용하지 않습니다.
+this 키워드는 변수의 스코프 규칙을 따르지 않습니다.
+화살표 함수의 예외를 제외하면 중첩된 함수는 포함하는 함수의 this 값을 상속하지 않습니다.
+중첩된 함수를 메서드로 호출하면 그 this값은 호출한 객체입니다.
+(화살표 함수가 아닌)중첩된 함수를 호출하면 그 this 값은 일반 모드에서는 전역 객체이고,
+스트릭트 모드에서는 undefined입니다.
+중첩된 함수에서 this 키워드는 메서드의 객체와 같지 않습니다.
+ES6이후에는 중첩된 함수를 화살표 함수로 변환해 this 값을 상속하게 하는 방법도 가능합니다.
+
+### 메서드 체인
+
+메서드가 객체를 반환하면 그 반환 값에서 다시 메서드를 호출할 수 있습니다.
+
+```js
+// then 체이닝 예시
+doStepOne().then(doStepTwo).then(doStepThree).catch(handleErrors);
+```
+
+메서드 호출을 '체인'으로 이어서 표현식 하나로 만들 수 있습니다.
 
 ### 생성자로 호출
 
+함수나 메서드를 호출할 때 앞에 new 키워드를 붙이면 생성자로 호출됩니다.
+생성자 호출은 인자 처리, 호출 컨텍스트, 반환 값 등에서 일반적인 함수나 메서드 호출과 다릅니다.
+
+```js
+o = new Object();
+o = new Object();
+```
+
+생성자 함수는 일반적으로 return 키워드를 사용하지 않습니다.
+하지만 생성자가 명시적으로 return문을 사용해 객체를 반환한다면 그 객체가 호출 표현식의 값이 됩니다.
+
 ### 간접적 호출
 
+`call()`과 `apply()`메서드는 함수를 간접적으로 호출합니다.
+두 메서드 모두 호출 시점에 this 값을 직접 명시할 수 있으므로, 함수를 어떤 객체의 메서드로 호출 할 수 있습니다.
+call 메서드는 인자 리스트를 받고, apply 메서드는 인자로 배열을 받습니다.
+
 ### 묵시적 함수 호출
+
+자바스크립트에는 함수 호출처럼 보이지 않지만 함수를 호출하는 기능이 여럿 존재합니다.
+묵시적 함수 호출은 만약 버그, 부작용, 성능 문제가 발생한다면 언제 호출되는지 모르기에 명확히 알기 어렵습니다.
+
+- 객체에 게터나 세터가 있다면, 프로퍼티 값에 접근할 때 이 메서드가 호출될 수 있습니다.
+- 문자열을 받는 컨텍스트에 객체를 사용하면 toString() 메서드가 호출됩니다.
+- 객체를 숫자 컨텍스트에 사용하면 valueOf() 메서드가 호출됩니다.
+- 이터러블 객체의 요소를 순회할 때 여러가지 메서드가 호출 될 수 있습니다.
+- 태그된 템플릿 리터럴도 함수 호출을 일으킬 수 있습니다.
+- 프록시 객체는 완전히 함수에 의해 제어됩니다.
 
 <br>
 
@@ -278,61 +305,246 @@ function func() {
 
 ## 함수 매개변수
 
-### 선택 사항인 매개변수와 기본 값
+자바스크립트 함수는 매개변수로 어떤 타입을 받는지 정의하지 않으며, 함수 호출시점에서도 전달받은 값의 타입을 체크하지 않습니다.
+자바스크립트 함수를 호출할 때 전달받은 인자의 개수조차 체크하지 않습니다.
 
-### 나머지 매개변수와 가변 길이 인자 리스트
+```js
+function func(num1, num2, num3) {
+  console.log(num1, num2, num3);
+}
 
-### Argument 객체
+func(1, 2); // 1 2 undefined
+```
 
-### 함수 호출과 분해 연산자
+선언된 매개변수보다 적은 인자로 함수를 호출하면, 대응하는 인자가 없는 매개변수는 기본 값으로 정해지며 일반적으로 이 값은 undefined 입니다.
 
-### 함수 인자를 매개변수로 분해
+<br>
 
-### 인자 타입
+---
 
-## 값인 함수
+<h2 id='1'>📌 일반함수와 화살표 함수의 차이점 </h2>
 
-### 함수 프로퍼티 직접 정의
+```js
+function func1() {
+  console.log(this); // Window
+}
 
-## 네임스페이스인 함수
+const func2 = () => {
+  console.log(this); // Window
+};
+```
 
-## 📌 클로저
+일반 함수와 화살표 함수는 기본적으로 바인딩되는 this가 다르지만, 정확히 어떻게 this가 다른지 알기 위해서는 먼저 실행 컨텍스트의 개념을 이해해야 합니다.
 
-## 함수 프로퍼티,메서드,생성자
+<br>
 
-### length 프로퍼티
+---
 
-### name 프로퍼티
+<h2 id = '2'>📌 실행 컨텍스트 (Execution Context)</h2>
 
-### prototype 프로퍼티
+실행 컨텍스트란, 자바스크립트 코드가 실행되고 연산되는 범위를 나타내는 추상적인 개념입니다.
+코드가 실행된다면 실행 컨텍스트 내부에서 작동하고 있는 것이라고 보면 됩니다.
+실행 컨텍스트는 크게 `Variable Environment, Lexical Environment, thisBinding` 이 3가지의 정보를 가지고 있습니다.
 
-### call()과 apply()메서드
+- Global Execution Context (전역 컨텍스트)
 
-### bind()메서드
+기본적으로 코드가 실행되는 영역이며, 여기서 글로벌 객체인 `Window`객체를 생성합니다.
+(`this`를 글로벌 객체`Window 객체`로 설정)
 
-### toString()메서드
+- Functional Execution Context (함수 컨텍스트)
 
-### Function()생성자
+각각의 함수가 가지는 실행 컨텍스트로, 함수가 호출 될 때 해당 실행 컨텍스트가 생성됩니다.
 
-## 📌 함수형 프로그래밍
+```js
+function foo1() {
+  console.log("foo1");
+}
 
-### 함수로 배열 처리
+function foo2() {
+  const fooVar = 10;
+  const printVar = (value) => console.log(value);
 
-### 고계 함수
+  console.log("foo2");
+  foo1();
+  printVar(fooVar);
+}
 
-### 함수의 부분 적용
+const fooVar = 5;
+foo2();
 
-### 📌 메모이제이션
+//foo1;
+//foo2;
+//10;
+```
 
-## 요약
+<br>
 
-- function 키워드, 화살표 함수 정의 차이점
-- 메서드, 생성자
-- 함수 매개변수에 기본 값을 할당하는 기능
-- 나머지 매개변수를 사용해 인자 여럿을 배열에 모으는 기능
-- 객체와 배열을 분해해 함수 매개변수로 사용하는 기능
-- 분해연산자를 사용해 배열이나 이터러블 객체의 요소를 함수 인자로 전달해 호출
-- 클로저 : 외부 함수 안에서 정의되고 반환된 함수는 외부 함수의 어휘적 스코프에 대한 접근을 유지
-  (외부 함수에서 정의한 변수에 접근가능)
-- 함수는 자바스크립트에서 조작 가능한 객체
-  (함수형 프로그래밍 가능)
+---
+
+<h2 id = '3'>📌 this가 바뀌는 시점 </h2>
+
+this는 기본적으로 Window 객체를 말합니다. (Node.js는 Global 객체)
+하지만 this의 값이 바뀌는 경우가 존재하며, this 값을 다음에 올 메서드에 전달할 수 도 있습니다.
+
+> 함수를 어떤 객체의 메서드로 호출하면 this의 값은 그 객체를 사용하지만, 화살표 함수는 스스로의 this 바인딩을 제공하지 않습니다. - MDN
+
+```js
+// 객체의 메서드를 호출하는 경우
+const obj = {
+  func1: function () {
+    return this;
+  },
+  func2: () => {
+    return this;
+  },
+};
+
+console.log(obj.func1()); // obj객체
+console.log(obj.func2()); // Window
+```
+
+즉, 일반 함수는 해당 객체를 바인딩하여 this값으로 변경하며 화살표 함는는 상위 객체의 this를 그대로 이어받아 사용합니다.
+
+```js
+// 생성자를 통해 객체를 생성하는 경우
+function People(name, age) {
+  this.name = name;
+  this.age = age;
+}
+
+// 생성자를 사용하지 않은 경우 - 단순 호출
+const foo1 = People("foo1", 19); // undefined
+console.log(window.name, window.age); // foo1 20
+
+// 생성자를 통해 객체 생성
+const foo2 = new People("foo2", 20);
+console.log(foo2.name, foo2.age); // foo2 20 this가 해당 객체에 바인딩됨
+```
+
+new 키워드를 통해 객체를 생성하면 this가 해당 객체에 바인딩 되어 해당 값을 읽을 수 있게 됩니다.
+이는 ES6에 추가된 class를 사용하면 동일하게 작동합니다.
+
+<br>
+
+---
+
+<h2 id = '4'>📌 apply, call, bind 메서드</h2>
+
+자바스크립트에서는 this의 바인딩을 바꿀 수 있도록 아래와 같은 메서드를 제공해줍니다.
+
+- `apply()`: call 함수와 유사하지만, 매개변수는 배열로 받습니다.
+- `call()`: 객체를 바인딩 함과 동시에 호출합니다.
+- `bind()`: 바인딩된 함수를 반환하며, 한번 더 호출시 함수를 실행합니다.
+
+```js
+const foo = {
+  age: 20,
+  gender: "male",
+};
+
+function printPeople(name) {
+  console.log(name, this.age, this.gender);
+}
+
+printPeople.apply(foo, ["foo"]); // foo 20 male
+printPeople.call(foo, "foo"); // foo 20 male
+printPeople.bind(foo, "foo").call(); // foo 20 male
+```
+
+<br>
+
+---
+
+<h2 id = '5'>📌 함수 호이스팅 </h2>
+
+호이스팅이란 변수를 선언하고 초기화했을 때 선언 부분이 최상으으로 끌어올려지는 현상을 의미합니다.
+(초기화 또는 대입 부분은 그대로 남아 있습니다.)
+
+함수에서는 함수 표현식이 아니라 함수 선언식일 때 식 자체가 통째로 끌어올려집니다.
+
+```js
+console.log(foo); // 에러가 아니라 undefined
+hello(); // 'hello' 정상적으로 출력됨
+
+function hello() {
+  console.log("hello");
+}
+var foo = "foo";
+```
+
+위 코드는 선언보다 호출을 먼저 하기 때문에 얼핏보면 말이 안되는 것처럼 보이지만, 에러없이 정상 작동합니다.
+변수 선언과 함수 선언식이 호이스팅 되었기 때문이죠.
+
+```js
+'전역 컨텍스트': {
+  변수객체: {
+    arguments: null,
+    variable: [{hello: Function}],
+  }
+  scopeChain: ['전역 변수객체'],
+  this: window,
+}
+```
+
+함수 선언식으로 생성한 함수는 이런식으로 컨텍스트 생성 후 바로 대입되며, 코드가 순차적으로 실행되게 됩니다.
+
+<br>
+
+---
+
+<h2 id = '6'>📌 클로저 </h2>
+
+클로저 : 외부 함수 안에서 정의되고 반환된 함수는 외부 함수의 어휘적 스코프에 대한 접근을 유지
+(외부 함수에서 정의한 변수에 접근가능)
+
+```js
+var makeClosure = function () {
+  var name = 'foo'l
+  return function () {
+    console.log(name);
+  }
+}
+
+var closure = makeClosure(); // function () {console.log(name);}
+closure(); // 'foo';
+```
+
+위 클로저 함수를 컨텍스트로 분석해보면, 전역 컨텍스트 생성 후 makeClosure 함수 호출시 makeClosure 컨텍스트도 만들어집니다.
+
+```js
+"전역 컨텍스트": {
+  변수객체: {
+    arguments: null,
+    variable: [{ makeClosure: Function }, 'closure'],
+  },
+  scopeChain: ['전역 변수객체'],
+  this: window,
+}
+"makeClosure 컨텍스트": {
+  변수객체: {
+    arguments: null,
+    variable: [{ name: 'foo' }],
+  },
+  scopeChain: ['makeClosure 변수객체', '전역 변수객체'],
+  this: window,
+}
+```
+
+주목할 점은 `closure = makeClosure();`를 할 때의 상황인데 function 선언 시의 스코프 체인은 렉시컬 스코프를 따라서 ['makeClosure 변수객체', '전역 변수객체']를 포함합니다.
+
+```js
+// closure()를 호출 할 때의 컨텍스트
+"closure 컨텍스트":  {
+  변수객체: {
+  arguments: null,
+  variable: null,
+  scopeChain: ['closure 변수객체', 'makeClosure 변수객체', '전역 변수객체'],
+  this: window,
+  }
+}
+```
+
+자바스크립트에서는 클로저를 활용해 이러한 비공개 변수를 만들어 활용할 수 있습니다.
+항상 사용자가 할 수 있는 모든 행동과 일어날 수 있는 경우의 수를 통제하고 있어야 하는데, 사용자를 통제하기 위한 기본적인 방법이 바로 클로저 입니다.
+하지만, 클로저의 비공개 변수는 자바스크립트에서 언제 메모리 관리를 해야할 지 모르기 때문에 자칫 메모리 낭비로 이어질 수 있습니다.
+또한 스코프 체이닝이 일어나게 된다면 거슬러 올라가는 행동을 하기 때문에 조금 느릴 수 있습니다.
