docs: 짐코딩의 프론트엔드 날개달기 완강

--- a/sub/ETC/기본개념정리.md
+++ b/sub/ETC/기본개념정리.md
@@ -1845,4 +1845,277 @@ npm install -g nodemon // nodemon이라는 패키지를 전역설치
 
 ---
 
-##
+## Webpack (웹팩)
+
+웹팩에 대해 알기전에 모듈에 대해서 알고 있어야한다.
+우리가 자바스크립트를 이용해서 개발을 하다보면 코드의 유지보수 측면에서 파일을 여러개로 분리해서 개발을 하곤 한다.
+이렇게 분리된 파일을 모듈이라고 한다.
+자바스크립트 코드를 모듈로 분리하게 되면 이러한 모듈을 필요한 어떤 곳에서든 재사용이 가능하기 때문에 자주 사용하는 코드같은 경우에는 모듈로 분리해서 개발을 하는 것이다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/a24d1358-3f5d-4eb0-a505-e4dfbb99f141/image.png)
+
+이런식으로 웹 애플리케이션이 완선이 되면, 웹서버에 배포를 하게 되고 사용자들이 브라우저를 통해 웹사이트에 접근을 하게되면
+브라우저는 사용자들에게 UI를 보여주기 위해 웹서버에 파일과 같은 자원을 요청한다.
+그리고 웹서버는 준비된 자원을 브라우저에게 응답함으로써 사용자들은 UI를 볼 수 있게 된다.
+
+하지만 개발 편의성을 위해 모듈을 계속해서 분리하다보면 그만큼 브라우저에서 서버에게 요청하는 개수가 많아지고,
+이러한 네트워크 비용의 증가는 페이지 로딩 시간을 길어지게 함으로써 UX에 좋지 않은 경험을 발생시킬 수 있다.
+
+그러면 개발 편의를 위해 모듈로 분리해서 개발을 하고, 페이지 로딩시간을 줄일 수 있는 방법이 없을까?
+
+그 방법은 바로 서버에게 요청하는 HTTP 요청의 개수를 줄이는 것이다.
+개발을 할 때에는 모듈로 나누어서 개발을 진행하고, 웹서버에 배포하기 전에 이러한 모듈들을 하나의 파일로 묶어서 배포하는 방식이다.
+이렇게 되면 그만큼 서버로 요청하는 개수가 줄어들기 때문에 UX를 향상시킬 수 있다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/8c6adc98-35d6-4ca9-bc63-8b944857fad0/image.png)
+
+이렇게 하나로 묶는 작업을 **번들링**이라고 하며, 여러개의 파일을 하나로 묶어주는 도구를 **모듈 번들러** 라고한다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/001b1dca-115d-4f45-87a3-a9ca2a563525/image.png)
+
+모듈 번들러의 종류는 다양하지만, 프론트엔드에서 가장 많이 사용되는 모듈 번들러가 바로 **웹팩(Webpack)**이다.
+다시 정리하자면, 웹팩이란 여러개의 파일들을 하나로 묶어주는 모듈 번들러이다.
+주로 자바스크립트 파일을 위한 모듈 번들러이지만 위 그림과 같이 플러그인을 포함하는 경우 자바스크립트 뿐만 아니라 HTML,CSS,이미지와 같은 자원들도 변환할 수 있다.
+
+**웹팩이 있기 전**
+
+```js
+// a.js
+var number = 10;
+```
+
+```js
+// b.js
+var number = 20;
+```
+
+```js
+// c.js
+var number = 30;
+```
+
+```html
+<!--index.html-->
+<script src="./a.js"></script>
+<script src="./b.js"></script>
+<script src="./c.js"></script>
+<script>
+  console.log(number); // 마지막 script가 된 c파일의 30이 출력됨
+</script>
+```
+
+위와 같은 문제를 해결하기 위해 모듈 시스템이 탄생했고, ES6에서 추가된 문법으로 가져올 수 있다.
+
+```js
+// a.js
+var number = 10;
+export default number;
+```
+
+```js
+// b.js
+var number = 20;
+export default number;
+```
+
+```js
+// c.js
+var number = 30;
+export default number;
+```
+
+```html
+<!--index.html-->
+<script type="module">
+  import a_number from "./a.js";
+  import b_number from "./b.js";
+  import c_number from "./c.js";
+  console.log(a_number, b_number, c_number); // 10 20 30
+</script>
+```
+
+![](https://velog.velcdn.com/images/ninto_2/post/ae44d2a5-a827-4beb-95d7-084151eca70b/image.png)
+
+모듈로 연결을 하면 HTML파일에서 잘 불러올 수 있지만, Network창을 확인해보면 현재 모듈을 3개 불러왔기 때문에, 브라우저에서 3개의 모듈을 확인할 수 있다.
+하지만 모듈이 많아지게 된다면 비효율적이게 된다.
+
+```js
+//a-1.js
+var number = 100;
+export default number;
+```
+
+```js
+//a-2.js
+var number = 200;
+export default number;
+```
+
+```js
+// a.js
+import number1 from "./a-1.js";
+import number2 from "./a-2.js";
+
+var number = number1 + number2;
+export default number;
+```
+
+![](https://velog.velcdn.com/images/ninto_2/post/c89e2d78-12a2-42b6-b9a1-5f8cbf72439a/image.png)
+
+HTML에서는 3개의 모듈을 사용했지만, Network창에서는 a-1.js와 a-2.js 파일이 추가된 것을 확인할 수 있다.
+이렇게 모듈이 점점 증가하게 되면 비효율적인 이유가 모듈을 클릭해서 Timing을 살펴보면 이러한 컨텐츠를 가져오는 총 시간을 나타내는 탭이라고 보면 된다.
+이런 컨텐츠를 요청하고 커넥션하는 시간은 컨텐츠 마다 계속 소비되는 시간이기 때문이다.
+
+그렇기 때문에 위와 같은 컨텐츠를 하나의 컨텐츠로 가져올 수 있다면, 불필요하게 낭비되는 시간을 줄일 수 있다.
+그러면 이번에는 웹팩을 사용해서 여러개의 파일을 하나로 묶어서 HTTP 요청을 줄여보도록 하자.
+
+먼저 소스 폴더를 만든 뒤 모듈들을 소스 폴더에 넣어준다.
+
+```js
+// src 폴더의 index.js
+
+import a_number from "./a.js";
+import b_number from "./b.js";
+import c_number from "./c.js";
+console.log(a_number, b_number, c_number);
+
+const $buttonA = document.querySelector("#button-a");
+const $buttonB = document.querySelector("#button-b");
+const $buttonC = document.querySelector("#button-c");
+const $dispaly = document.querySelector("#display");
+
+$buttonA.addEventListener("click", function () {
+  $dispaly.textContent = a_number;
+});
+$buttonB.addEventListener("click", function () {
+  $dispaly.textContent = b_number;
+});
+$buttonC.addEventListener("click", function () {
+  $dispaly.textContent = c_number;
+});
+```
+
+웹팩으로 번들링하기 전에 간단한 기능을 추가해보자.
+
+```html
+<script type="module" src="./src/index.js"></script>
+<body>
+  <button type="button" id="button-a">a_number</button>
+  <button type="button" id="button-b">b_number</button>
+  <button type="button" id="button-c">c_number</button>
+  <div id="display"></div>
+</body>
+```
+
+위 기능은 각각의 버튼을 클릭했을때 해당하는 number값을 div위치에 출력시키는 기능이다.
+
+웹팩을 설치하기 이전에는 위 프로젝트가 npm에 의해 관리가 되어야 한다.
+
+```
+// package.json 파일 생성하기
+npm init -y
+
+// webpack과  webpack-cli를 로컬 환경에 설치하기
+npm install --save-dev webpack webpack-cli
+```
+
+웹팩같은 경우 운영환경에 배포될 일이 없기 때문에, devDependencies에 추가될 수 있도록 `--save-dev`를 붙여준다.
+로컬환경에 설치된 cli 명령어를 사용하기 위해서는 `npx` 명령어를 이용해서 실행 해야한다.
+
+- dist 폴더 추가 생성
+
+```
+// entry는 웹팩의 진입점이다 (어떠한 파일을 기준으로 번들링할 것인지 설정- 뒤에 번들링을 할 진입점 파일경로를 써준다.)
+// output은 디렉토리 하나를 생성한 다음 그 디렉토리안에 번들링을 할 파일을 생성하도록 설정해준다.
+// 참고로 mode development를 적용하게 되면 압축없이 main.js가 생성된다.
+npx webpack --entry ./src/index.js --output-path ./dist --mode development
+```
+
+위와 같이 사용하면, 해당 파일을 기준으로 사용하고 있는 모듈과 그 모듈안에서 사용하고 있는 모듈들까지 모두 계속해서 추적해 나간다.
+output에 폴더를 입력해주면, 해당 폴더 안에 main.js가 생성된 것을 볼 수 있다.
+
+번들링을 할 때 기본적으로 production이 적용되었기 때문에 띄어쓰기 없이 압축되어 파일이 생성된 것을 확인할 수 있다.
+
+```html
+<script type="module" src="./dist/main.js"></script>
+<body>
+  <button type="button" id="button-a">a_number</button>
+  <button type="button" id="button-b">b_number</button>
+  <button type="button" id="button-c">c_number</button>
+  <div id="display"></div>
+</body>
+```
+
+HTML파일안에서는 script로 웹팩에서 생성한 main.js를 src해준다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/62b3499b-97ac-4975-ab9c-236ae1fc1155/image.png)
+
+이렇게 되면, 그 전과는 다르게 Network를 확인했을때 main.js 파일 하나만 HTTP 요청을 보낸 것을 확인할 수 있다. (시간도 이전과 절반정도 차이가 남)
+그리고 그 전과 동일하게 기능은 똑같이 동작하고 있다.
+즉, 웹팩을 사용하게 되면 실제 운영환경에서는 엄청난 성능향상 차이를 경험할 수 있다.
+
+**웹팩의 환경설정 파일을 적용해서 사용**
+
+```js
+// webpack.config.js
+const path = require("path");
+
+// 여기에서 node를 지정해줄 수 있다.
+module.exports = {
+  node: "production", // 혹은 development
+  entry: "./src/index.js",
+  output: {
+    path: path.resolve(__dirname, "dist"),
+    filename: "bundle.js",
+  },
+};
+```
+
+웹팩을 사용할 때 기본적으로 `webpack.config.js`을 참조하기 때문에, webpack홈페이지에서 가져온 코드를 해당 파일에 붙여넣는다.
+entry는 진입점을 설정하는 속성이고, output은 번들링 파일이 위치할 파일 path, 파일명을 지정해주면 된다.
+위처럼 파일을 작성한 뒤 npx webpack으로 바로 진입을 해보자.
+
+```
+npx webpack
+```
+
+그러면, webpack.config.js를 참고해서 dist 폴더에 'bundle.js' 파일을 생성함
+
+```html
+<script type="module" src="./dist/bundle.js"></script>
+<body>
+  <button type="button" id="button-a">a_number</button>
+  <button type="button" id="button-b">b_number</button>
+  <button type="button" id="button-c">c_number</button>
+  <div id="display"></div>
+</body>
+```
+
+이렇게 번들링하는 명령어는 자주 사용하는 명령어이기 때문에 package.json 파일에 scripts에 빌드 명령어로 추가를 해놓는다.
+
+```json
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build": "webpack", // 로컬 환경에 설치해놓았기 때문에 바로 webpack 명령어 실행이 가능
+}
+```
+
+```
+npm run build
+```
+
+위와 같이 명령어를 추가해주면 dist폴더에 bundle.js파일이 잘 생성되는 것을 확인할 수 있다.
+
+![](https://velog.velcdn.com/images/ninto_2/post/c8eb742c-bfde-43e5-a954-9a9aad60212b/image.png)
+
+이렇게 웹팩은 배포하기 전에 번들링해주는 도구이다.
+우리가 개발 편의성이나 재사용, 유지보수 측면에서 소스를 모듈별로 분리해서 개발을 한다.
+그리고 배포할 때에는 이 dist폴더에 번들링을 한 다음에 bundle.js파일만 배포를 하는 것이다.
+
+이렇게 되면, src폴더 안과 그 아래에 있는 파일들은 배포할 필요가 없고 dist폴더에 있는 bundle.js파일과 index.html파일만 배포를 하면된다.
+그리고 웹팩은 자바스크립트 파일 뿐만 아니라 이미지, CSS 등 다양한 데이터를 변환할 수 있다.
+
+정리하자면 웹팩은 여러개의 파일들을 하나의 파일로 묶어주는 모듈 번들러이다.
+이러한 모듈 번들러는 프론트엔드에서 서버로 요청할 때, HTTP 요청 개수를 줄여줌으로서 퍼포먼스를 확장을 하고
+공백과 같은 것들을 줄임으로써 리소스를 최적화한다.
+그렇기 때문에 이러한 모듈번들러를 사용하면 사용자 경험이 더 좋아질 수 있다.
