--- a/sub/Algorithm/스택.md
+++ b/sub/Algorithm/스택.md
@@ -41,13 +41,6 @@
 > 1.  스택에 쌓여 있는 숫자와 쌓아서 제일 위에 있는 숫자를 고려해야 한다.
 > 2.  쌓을 때, 항상 최댓값을 갱신시켜줘서 갱신된 숫자 위로만 쌓는 것이 중요하다.
 
-```js
-const input = require("fs").readFileSync("dev/stdin").toString().split("\n");
-const num = input[0]; // 스택에 들어올 숫자의 개수를 의미함
-let arr = [];
-let stack = [];
-```
-
 ![](https://velog.velcdn.com/images/ninto_2/post/d3966541-bc9d-4b14-a1e5-1ec1eff55c9f/image.png)
 
 위 문제를 풀이해보면, 첫번 째 줄에 스택에 들어올 숫자의 개수가 주어지고 2번째 줄부턴 1부터 해당 줄의 숫자가 될 때까지 스택에 수를 쌓는 식이다.
@@ -67,11 +60,49 @@ let stack = [];
 즉, 6이 들어오는 시점의 최대 숫자는 4가 된다.
 따라서 스택에 넣는 수는 4 이후의 값인 5와 6을 넣어 `+` 두 번이 쌓이게 되고, 6을 만났기 때문에 `-`를 추가하게 되는 구조이다.
 
-그 다음 입력값인 8을 생각해보면, 스택에 1,2,5가 남아있고 최대 숫자는 이전 입력값이였던 6으로 바뀌어야한다.
+그 다음 입력값인 8을 생각해보면, 스택에 1,2,5가 남아있고 최대 숫자는 이전 입력값이였던 6으로 바뀌어야한다. 그리고 7, 8을 넣어 `+` 두 번이 쌓이게 되고, 마찬가지로 `-`를 추가하게 된다.
 
 맨 처음 4가 들어왔을땐, max값이 4로 유지가 된다.
 3이 들어왔을때, 3은 max값 보다 작기 때문에 갱신이 이루어지지 않는다.
 반대로 6이 들어왔을땐, 6은 max값 보다 크기 때문에 max값이 6으로 바뀌게 된다.
+
+이런 점을 생각해서보면 아래와 같이 코드를 짤 수 있게 된다.
+
+```js
+const input = require("fs")
+  .readFileSync("/dev/stdin")
+  .toString()
+  .split("\n")
+  .map(Number);
+const [num, ...numbers] = input; // num은 수의 개수, numbers는 스택에 들어갈 숫자들
+
+function getResult() {
+  const stack = [];
+  let answer = "";
+  let count = 1; // 1부터 시작
+
+  for (let i = 0; i < num; i++) {
+    const currNum = numbers.shift(); // 입력받은 숫자를 for문으로 하나씩 꺼낸다.
+
+    while (count <= currNum) {
+      stack.push(count++); // 입력된 수와 같아질 때까지 수를 채워준다.
+      answer += "+";
+    }
+
+    const maxNum = stack.pop(); // 같아졌으므로 배열에서 빼주고 빼준 수를 maxNum으로 잡는다.
+
+    if (maxNum !== currNum) {
+      // 만약 pop한 숫자와 입력된 숫자가 다르다면 수열을 만들 수 없으므로 NO를 리턴한다.
+      return "NO";
+    }
+
+    answer += "-"; // 위의 경우가 아니라면 정상적으로 표시를 추가해준다.
+  }
+  return answer.split("").join("\n"); // 반복을 돌며 완성된 문자를 쪼갠뒤, 줄바꿈을 추가해서 다시 합쳐준다.
+}
+
+console.log(getResult());
+```
 
 <br>
 
